data/derived/comb/progs/unify/prog8853.ml.out
Characters 13-21:
  let _ = eval (Neg(1));;
               ^^^^^^^^
Error: This expression has type expr but an expression was expected of type
         expr * float * float
